# shed

./: .gitignore  Cargo.toml  readme.md  tesing
src/: lib.rs  main.rs
tests/: change.rs  deletions.rs  substitution.rs
tests/common/: mod.rs
