[package]
name = "shed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# codegen-units = 1  # <- actually slows it down
lto = true # ~1.11x faster, and release compile time is still pretty fast

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
rustc-hash = "1.1.0"
